[gd_scene load_steps=12 format=3 uid="uid://cojgne2mgqepd"]

[ext_resource type="Script" uid="uid://bt7qnmy611831" path="res://scenes/player/player.gd" id="1_8afob"]
[ext_resource type="PackedScene" uid="uid://ccyrjfgwxtded" path="res://scenes/components/random_audio_player_component.tscn" id="2_je7p5"]
[ext_resource type="AudioStream" uid="uid://buuhexsuc44s3" path="res://assets/audio/sfx/8bit_lazer.ogg" id="3_0owmy"]
[ext_resource type="PackedScene" uid="uid://dhd4f3glgvj4h" path="res://scenes/components/health_component.tscn" id="3_gmlin"]
[ext_resource type="Texture2D" uid="uid://sanwtepvevca" path="res://assets/textures/movement_trails_2.png" id="3_lvxji"]
[ext_resource type="Texture2D" uid="uid://bjrny37ardjbv" path="res://assets/textures/star_shot_trail.png" id="3_p47bc"]
[ext_resource type="AudioStream" uid="uid://3yclqyiedd6c" path="res://assets/audio/sfx/basic_enemy/footstep_carpet_004.ogg" id="4_qek5x"]
[ext_resource type="Material" uid="uid://dsne8rx3g808s" path="res://assets/particles/player_power_ready_particle_process_material.tres" id="7_5gtgg"]
[ext_resource type="Texture2D" uid="uid://csyquygvptofv" path="res://scenes/player/original_ship_cleanup_2.png" id="9_5gtgg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gmlin"]
size = Vector2(68, 32)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p47bc"]
height = 48.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 8
script = ExtResource("1_8afob")
power_charge_target = 100.0
projectile_minimum_wait_time = 0.1

[node name="ProjectileRandAudioComponent" parent="." instance=ExtResource("2_je7p5")]
unique_name_in_owner = true
bus = &"SFX"
streams = Array[AudioStream]([ExtResource("3_0owmy")])
min_volume = -15.0
max_volume = -9.0
min_pitch = 1.75
max_pitch = 2.5

[node name="DamagedRandomAudioPlayerComponent" parent="." instance=ExtResource("2_je7p5")]
unique_name_in_owner = true
bus = &"SFX"
streams = Array[AudioStream]([ExtResource("4_qek5x")])
min_volume = -9.05
max_volume = -4.01
min_pitch = 1.23
max_pitch = 2.09

[node name="UsingPowerTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SemiAutomaticTimer" type="Timer" parent="."]
wait_time = 0.125

[node name="BoostAutomaticTimer" type="Timer" parent="."]
wait_time = 0.125

[node name="UpdatePowerBarValueTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_gmlin")

[node name="HealthComponent" parent="." instance=ExtResource("3_gmlin")]
max_health = 9

[node name="PowerReadyGPUParticles2D" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -23)
texture = ExtResource("3_p47bc")
preprocess = 0.5
process_material = ExtResource("7_5gtgg")

[node name="TrailsLSprite2D" type="Sprite2D" parent="."]
position = Vector2(-23, 34.84)
scale = Vector2(0.49, 1.15)
texture = ExtResource("3_lvxji")

[node name="TrailsRSprite2D" type="Sprite2D" parent="."]
position = Vector2(23, 34.84)
scale = Vector2(0.49, 1.15)
texture = ExtResource("3_lvxji")

[node name="BodySprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.55, 0.55)
texture = ExtResource("9_5gtgg")
offset = Vector2(1.5, 0)

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_p47bc")
debug_color = Color(0.960784, 0, 0.509804, 0.243137)

[node name="ProjectileSpawnMarker2D" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -25)
